add BookAPI
